force-app/main/default/objects/DeployResultTest__c/DeployResultTest__c.object-meta.xml
<CustomObject>
    <label>Deploy Result Tests</label>
    <nameField>
        <displayFormat>DET-{000000}</displayFormat>
        <label>Test ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deploy Result Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>