force-app/main/default/objects/DeployResultTest__c/fields/DeployResult__c.field-meta.xml
<CustomField>
    <fullName>DeployResult__c</fullName>
    <description>Deploy Result</description>
    <label>Deploy Result</label>
    <referenceTo>DeployResult__c</referenceTo>
    <relationshipName>DeployTestResults</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>