force-app/main/default/objects/DeployResultTest__c/fields/ExecutionTime__c.field-meta.xml
<CustomField>
    <fullName>ExecutionTime__c</fullName>
    <description>Execution Time</description>
    <formula>LPAD(TEXT(FLOOR(Time__c / 3600000)), 2, &quot;0&quot;) &amp; &quot;:&quot; &amp;
LPAD(TEXT(FLOOR(MOD(Time__c, 3600000) / 60000)), 2, &quot;0&quot;) &amp; &quot;:&quot; &amp;
LPAD(TEXT(FLOOR(MOD(Time__c, 60000) / 1000)), 2, &quot;0&quot;) &amp; &quot;.&quot; &amp;
LPAD(TEXT(MOD(Time__c, 1000)), 3, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execution Time</label>
    <type>Text</type>
</CustomField>