force-app/main/default/objects/DeployResultTest__c/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <description>Method Name</description>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>