force-app/main/default/objects/DeployResultTest__c/fields/NameSpace__c.field-meta.xml
<CustomField>
    <fullName>NameSpace__c</fullName>
    <description>Name Space</description>
    <label>Name Space</label>
    <length>255</length>
    <type>Text</type>
</CustomField>