force-app/main/default/objects/DeployResultTest__c/fields/PackageName__c.field-meta.xml
<CustomField>
    <fullName>PackageName__c</fullName>
    <description>Package Name</description>
    <label>Package Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>