force-app/main/default/objects/DeployResultTest__c/fields/SeeAllData__c.field-meta.xml
<CustomField>
    <fullName>SeeAllData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the deployment was executed with full access to org data (seeAllData=true).</description>
    <label>See All Data</label>
    <type>Checkbox</type>
</CustomField>