force-app/main/default/objects/DeployResultTest__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>Stack Trace</description>
    <label>Stack Trace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>