force-app/main/default/objects/DeployResultTest__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Time</description>
    <label>Time</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>