force-app/main/default/objects/DeployResultTest__c/listViews/DeployFailed.listView-meta.xml
<ListView>
    <fullName>DeployFailed</fullName>
    <columns>NAME</columns>
    <columns>ResultDisplay__c</columns>
    <columns>MethodName__c</columns>
    <columns>DeployResult__c</columns>
    <columns>Success__c</columns>
    <columns>ExecutionTime__c</columns>
    <columns>Message__c</columns>
    <columns>StackTrace__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Success__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Failed</label>
</ListView>