force-app/main/default/objects/DeployResultTest__c/listViews/DeploySuceeded.listView-meta.xml
<ListView>
    <fullName>DeploySuceeded</fullName>
    <columns>NAME</columns>
    <columns>ResultDisplay__c</columns>
    <columns>MethodName__c</columns>
    <columns>DeployResult__c</columns>
    <columns>Success__c</columns>
    <columns>ExecutionTime__c</columns>
    <columns>PackageName__c</columns>
    <columns>SeeAllData__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Success__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Suceeded</label>
</ListView>